--- a/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
+++ b/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Color palette */
 /* Sizes & margins */
 /* Components */
@@ -474,13 +473,16 @@
   display: none;
 }
 .neos.media-browser aside.neos-media-aside .neos-media-aside-group .neos-media-aside-list li > a:not(.neos-active).neos-drag-active::after {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content: "";
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-family: FontAwesome;
+  font-weight: 900;
+  line-height: 1;
+  vertical-align: -.125em;
+  content: \f063;
   position: absolute;
   right: 12px;
   top: 12px;
@@ -714,7 +716,7 @@
   width: 40px;
   padding: 0;
 }
-.neos.media-browser .neos-media-assets .neos-thumbnails > li .neos-button.dropdown-toggle .icon-ellipsis-horizontal {
+.neos.media-browser .neos-media-assets .neos-thumbnails > li .neos-button.dropdown-toggle .fa-ellipsis-h {
   line-height: 40px;
 }
 .neos.media-browser .neos-media-assets .neos-thumbnails > li .neos-img-label {
@@ -943,7 +945,7 @@
   color: #00b5ff;
   text-shadow: none;
 }
-.neos.media-browser:not(.media-module) table.neos-table:not(.neos-no-hover) .icon-move {
+.neos.media-browser:not(.media-module) table.neos-table:not(.neos-no-hover) .fa-move {
   cursor: move;
 }
 .neos.media-browser .neos-upload-area {
@@ -955,6 +957,9 @@
 }
 .neos.media-browser .neos-upload-area.neos-upload-area-active {
   border-color: #fff;
+}
+.neos.media-browser .neos-upload-area.neos-upload-area-active div {
+  pointer-events: none;
 }
 .neos.media-browser .neos-upload-area.neos-upload-area-active i {
   display: inline;
@@ -1018,9 +1023,9 @@
 .neos.media-browser .fold-toggle {
   cursor: pointer;
 }
-.neos.media-browser .icon-ok-sign {
+.neos.media-browser .fa-ok-sign {
   color: #00a338;
 }
-.neos.media-browser .icon-exclamation-sign {
+.neos.media-browser .fa-exclamation-sign {
   color: #ff8700;
 }
