TASK: Adapt to support AssetProxy

--- a/Neos.Media.Browser/Resources/Private/Layouts/Module/EditImage.html
+++ b/Neos.Media.Browser/Resources/Private/Layouts/Module/EditImage.html
@@ -3,4 +3,5 @@
 
 	<f:render section="Content" />
 </div>
+<script src="{f:uri.resource(path: 'resource://Neos.Media.Browser/Public/JavaScript/pdf.js')}"></script>
 <f:render section="Scripts" optional="TRUE" />
