BUGFIX: Correct preview link, readd preview label
# Conflicts:
#	Neos.Media.Browser/Resources/Private/Partials/ContentDefaultPreview.html
#	Neos.Media.Browser/Resources/Private/Templates/Asset/Edit.html

--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/Edit.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/Edit.html
@@ -54,7 +54,7 @@
                             </f:if>
                             <tr>
                                 <th>{neos:backend.translate(id: 'metadata.filename', package: 'Neos.Media.Browser')}</th>
-                                <td><a href="#" target="_blank">{assetProxy.filename}</a></td>
+                                <td><a href="{assetProxy.importStream}" target="_blank">{assetProxy.filename}</a></td>
                             </tr>
                             <tr>
                                 <th>{neos:backend.translate(id: 'metadata.lastModified', package: 'Neos.Media.Browser')}</th>
@@ -92,6 +92,7 @@
                 </fieldset>
             </div>
             <div class="neos-span6 neos-image-example">
+                <label>{neos:backend.translate(id: 'preview', package: 'Neos.Media.Browser')}</label>
                 <f:render section="ContentImage" arguments="{_all}" />
             </div>
         </div>
